# recipe_app_new

./: .gitignore  README.md  compose.prod.yml  db_schema.sql
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_recipes.py  0002_tags_ingredients_links.py  0003_users_and_recipe_author.py  0004_favorites.py  0005_subscriptions.py  0006_shopping_cart.py  0007_short_links.py  0008_foodgram_fields.py  0d37f2e29b44_add_moderation_fields.py  12b588a4c39d_add_comments.py  146378941_add_comment_likes.py  1b7c8d9e0f11_add_moderation_rejections_count.py  20260409_add_recipe_ratings.py  20260503_add_user_reports_and_user_blocking.py  20260506_add_market_products.py  20260619_add_support_requests.py  2c8d9e0f1122_merge_user_reports_and_moderation_counter.py  8f3f3f1f0a21_add_profile_fields_to_users.py  add_comment_parent_id.py  c7ce23f6a18d_add_recipe_steps.py  cd0a61664fab_add_servings_and_nutrition_fields.py  d3dad5c885eb_add_collections_tables.py  eee292fdce0c_add_is_admin_to_users.py
backend/src/: convert_recipe_images.py
backend/src/app/: main.py
backend/src/app/admin/: auth.py  views.py
backend/src/app/api/: __init__.py
backend/src/app/core/: config.py  db.py  db_sync.py  deps.py  errors.py  pagination.py  security.py
backend/src/app/models/: __init__.py  collection.py  collection_recipe.py  comment.py  comment_like.py  favorite.py  ingredient.py  (+13 more)
backend/src/recipe_app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/statics/css/: recepto-admin.css
backend/templates/sqladmin/: login.html
(+145 files in other folders)
